[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycap_mfr"
version = "0.0.1-a"
authors = [
    {name = "Souvik Maiti", email = "souvik.maiti1@ucalgary.ca"}
]
description = "Scripts to find missing values in data exported from REDCap"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "lark",
    "pandas",
    "pycap",
    "python-dotenv",
]
