[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycap-dqm"
description = "Scripts to implement the REDCap Data Quality Module in Python."
version = "0.0.1-a"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
keywords = ["REDCap", "Data Quality Module", "missing field report"]
authors = [
    {name = "Souvik Maiti", email = "souvik.maiti1@ucalgary.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "lark",
    "pandas",
    "pycap",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/FMC-Ortho-Trauma-Research/pycap-missing-field-reporter"

[tool.hatch.build.targets.wheel]
packages = ["src/dqm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
